--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <title>Bowling</title>
-<link href="/dist/main.css" rel="stylesheet"></head>
+<link href="dist/main.css" rel="stylesheet"></head>
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="/dist/bundle.js"></script></body>
+<script type="text/javascript" src="dist/bundle.js"></script></body>
 </html>
